# proto-cabalize

./: Setup.hs  example.cabal
